# self-learning

./: .clang-format  .gitignore  .gitmodules  LICENSE  README.md  bitbucket-pipelines.yml  build.sh  git-bugreport-2023-03-19-1739.txt  groups  project.config
.github/workflows/: github-actions-cmake.yml  jekyll-gh-pages.yml
BashScript/: conditional.sh  displaying_output.sh  files.txt  input.txt  looping.sh  read.sh  read_file.sh
Cmake/: build.sh
Cmake/CMakeTutorial/Step1/: CMakeLists.txt  tutorial.cxx
Cmake/CMakeTutorial/Step2/: run.sh  tutorial.cxx
Cmake/CMakeTutorial/Step3/: CMakeLists.txt
Cmake/CMakeTutorial/Step4/: CMakeLists.txt
Cmake/CMakeTutorial/Step5/: CMakeLists.txt  run_ctest.sh  run_installation.sh
Cmake/CMakeTutorial/Step6/: CMakeLists.txt
Cmake/CMakeTutorial/Version/: CMakeLists.txt  Version.cxx  Version.h  main.cxx
Cmake/CMakeTutorial_CodeTech/: build_all.sh
Cmake/CMakeTutorial_CodeTech/EP2_Libraries_Installing_PairingWithExecutables/PairingWithExecutables/AdderLib/: CMakeLists.txt  adder.cxx
Cmake/CMakeTutorial_CodeTech/EP2_Libraries_Installing_PairingWithExecutables/PairingWithExecutables/Test/: CMakeLists.txt  build.sh  main.cxx
Cmake/CMakeTutorial_CodeTech/EP3_GitSubmodules/: CMakeLists.txt  build.sh  configure.sh  main.cxx  run.sh
Cmake/CMakeTutorial_CodeTech/EP4_VersioningSourceCode/: CMakeLists.txt  build.sh  ep4Config.h.in  main.cxx
Cmake/CMakeTutorial_CodeTech/EP5_MakingLibsOptional/: CMakeLists.txt  build.sh  ep5Config.h.in  main.cxx
Cmake/CMakeTutorial_CodeTech/EP5_MakingLibsOptional/AdderLib/: CMakeLists.txt
Cmake/CMakeTutorial_CodeTech/EP6_InstallingYourSoftware/: CMakeLists.txt  README.md  build.sh  main.cxx  remove_script.sh
Cmake/CMakeTutorial_CodeTech/EP7_InstallingWithCPack/: CMakeLists.txt  build.sh  ep7Config.h.in  main.cxx  remove_script.sh
Cmake/CMakeTutorial_CodeTech/EP8_FindLibrary/: CMakeLists.txt  README.md  ep8Config.h.in  main.cxx
Cmake/CMakeTutorial_CodeTech/EP9_FindPackage/: CMakeLists.txt  License.txt  README.md  build.sh  ep9Config.h.in  main.cxx
Cmake/CMakeTutorial_SelfDefined/CodeCoverage/: CMakeLists.txt  README.md  build.sh  main.cxx
Cmake/Step2/: CMakeLists.txt
Cmake/Step6/: run.sh
Cpp/: CodeConvention.txt
Cpp/FarmFunnyGame/: CMakeLists.txt  Makefile  Readme.md  build.sh  dlt_filter.conf  main.cxx
Cpp/FarmFunnyGame/archive/: Makefile
Cpp/FarmFunnyGame/docs/: ArchitecturalDesign.drawio  ArchitecturalDesign.puml  SystemDesign.drawio  SystemDesign.puml
Cpp/FarmFunnyGame/include/: Animal.h  Cat.h  Chicken.h  Dog.h  Logger.h  MacDonald.h  Pig.h  SharedObjects.h  TimeManager.h  UserInterface.h  VariadicTable.h
Cpp/FarmFunnyGame/src/: Animal.cxx  CMakeLists.txt  Cat.cxx  Chicken.cxx  Dog.cxx  Logger.cxx  MacDonald.cxx  Pig.cxx  TimeManager.cxx  UserInterface.cxx  main.cxx
Cpp/FarmFunnyGame/unittests/: CMakeLists.txt  CmakeLists.txt  build.sh  lcovrc
Cpp/FarmFunnyGame/unittests/cmake-modules/: CodeCoverage.cmake  ColorizeMessage.cmake  RepoRoot.cmake  TargetRun.cmake
Cpp/FarmFunnyGame/unittests/testscripts/: UT_GMOCK_CHICKEN.cpp  UT_GMOCK_Chicken.cpp  UT_GMOCK_UserInterface.cpp  gtest_main.cpp
Cpp/FarmFunnyGame/unittests/testscripts/fake/dlt/: dlt_fake.h
Cpp/FarmFunnyGame/unittests/testscripts/mock/: Animal_mock.hpp  Logger_mock.hpp
Cpp/FileHandling/: cout.txt  file_handling_fstream.cc  file_handling_ifstream_ofstream.cc  io_redirection.cc  sample.txt
Cpp/Hacker-Rank/abstract-classes-polymorphism/: instruction.txt  main.cpp
Cpp/Hacker-Rank/accessing-inherited-functions/: instruction.txt  main.cpp
Cpp/Hacker-Rank/attending-workshop/: instruction.txt  main.cpp
Cpp/Hacker-Rank/bit-array/: instruction.txt  main.cpp
Cpp/Hacker-Rank/class-template-specialization/: instruction.txt  main.cpp
Cpp/Learning-Cpp/: CMakeLists.txt  data_types.cpp  file_input.cpp  file_output.cpp  file_output.txt  getting_started.cpp  input-argument-from-shell.cpp  text_input.txt
Cpp/LinuxTracingToolkit/: Readme.md  hello-tp.cc  hello-tp.h  hello.cc  trace.txt
Cpp/SmartPointer/: shared_ptr.cc  unique_ptr.cc  weak_ptr.cc  weak_ptr_circular_issue.cc  weak_ptr_circular_solved.cc
Cpp/Technique/DynamicLib/: main.cc  (+3 more)
Cpp/work-space/: Windows.cxx  logger.cxx  logger.hxx  main.cxx  scope.cxx
DesignPatterns/: build.sh
FreeRTOS/: Readme.md
FreeRTOS/Demo/: Makefile  build.sh  main_blinky.c
Libraries/: build_and_execute.py  libraries.sh
LinuxCommandLine/: command-lines-basic.txt  fix-broken-syntax.txt  practice-working-with-files.txt
PlantUML/ComponentsDiagram/: BasicExample.puml  ChaningArrowsDirection.puml  Components.puml  DisplayJsonData.puml  GroupingComponent.puml  IndividualColor.puml  Interfaces.puml  MixingPort.puml  Port.puml  UsingNotes.puml
PlantUML/SequenceDiagram/: AnchorsAndDuration.puml  BasicExamples.puml  ChangeArrowColor.puml  ChangeArrowStyle.puml  ChangingNotesShape.puml  ChangingPadding.puml  ColorAGroupMessage.puml  CreoleAndHtml.puml  DecalringParticipant_1.puml  DeclaringParticipantOnMultilines.puml  DeclaringParticipant_2.puml  DeclaringParticipant_3.puml  Delay.puml  DividerOrSeparator.puml  GroupingMessage.puml  HideUnlinkedParticipant.puml  IncomingAndOutgoingMessages.puml  IncomingMessagesArrow.puml  ItselfArrow.puml  LifelineActivationAndDestruction_1.puml  LifelineActivationAndDestruction_2.puml  LifelineActivationAndDestruction_3.puml  Mainframe.puml  MessageSequenceNumbering_1.puml  MessageSequenceNumbering_2.puml  MessageSequenceNumbering_3.puml  MessageToSelf.puml  MoreInformationOnTitles.puml  NormalArrow.puml  NoteOverAllParticipants.puml  NotesOnMessages.puml  OutgoingMessagesArrow.puml  PageTitle_Header_Footer.puml  ParticipantCreation.puml  ParticipantEncompass.puml  References.puml  RemovingFootBoxes.puml  Return.puml  SecondaryGoupLabel.puml  SeveralNotesAlignedAtTheSameLevel.puml  (+15 more)
Python/ProgressBar/: pretty_progress.py  requirements.txt  simple_progress.py
Regex/: Anchors.txt  Backreferences.csv  Backreferences.txt  CharacterSets.txt  GroupingAlternation.txt  LookaroundAssertion.txt  repetition.txt
TagQuestionExercises/: Exercises.txt
(+685 files in other folders)
